2-monitoring/2_grafana/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: prometheus-basic-auth
    # nginx.ingress.kubernetes.io/auth-secret-type: auth-file
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: devopscheats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-service
            port: 
              number: 3000
  # - host: www.devopscheats.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: grafana-service
  #           port:
  #             number: 3000
  tls:
    - hosts:
      # - devopscheats.com
      - www.devopscheats.com
      secretName: devopscheats-secret
